Bug 42414 - Rendering corruptions with gimp's color-chooser [SNA, 2.16.901]
Summary: Rendering corruptions with gimp's color-chooser [SNA, 2.16.901]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-31 01:25 UTC by Clemens Eisserer
Modified: 2011-10-31 04:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot of the problem (33.79 KB, image/png)
2011-10-31 01:25 UTC, Clemens Eisserer
no flags Details
xorg log (28.65 KB, text/plain)
2011-10-31 01:26 UTC, Clemens Eisserer
no flags Details
corruptions running java/swing application (124.67 KB, image/png)
2011-10-31 01:59 UTC, Clemens Eisserer
no flags Details
corruptions in eclipse's editor (165.44 KB, image/png)
2011-10-31 02:00 UTC, Clemens Eisserer
no flags Details
swingset demo application (1.57 MB, application/octet-stream)
2011-10-31 03:43 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-10-31 01:25:37 UTC
Created attachment 52936 [details]
screenshot of the problem

When using gimp with SNA enabled, I get corruptions with Gimp's color chooser - the gradient doesn't seem to get repainted while selecting a color. (there's some kind of selection cross)
Screenshot attached, works fine with UXA.

intel i945GM

libdrm-2.4.27
pixman-0.23.8
linux-3.1.0
xorg 1.11.1
Comment 1 Clemens Eisserer 2011-10-31 01:26:08 UTC
Created attachment 52937 [details]
xorg log
Comment 2 Clemens Eisserer 2011-10-31 01:56:58 UTC
Ok, I also get corruptions with eclipse (GTK+cairo), as well as java applications.
Screenshots attached.
Comment 3 Clemens Eisserer 2011-10-31 01:59:46 UTC
Created attachment 52938 [details]
corruptions running java/swing application
Comment 4 Clemens Eisserer 2011-10-31 02:00:27 UTC
Created attachment 52939 [details]
corruptions in eclipse's editor
Comment 5 Chris Wilson 2011-10-31 03:07:09 UTC
commit 088728ad26c7efc2d65b97ff22d526c65a0fa442
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 31 10:04:35 2011 +0000

    sna/blt: Don't idiotically override alu for pixel==0 and track alu
    
    Another classic and utterly stupid mistake. At least I was consistent in
    my error.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42414
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

That fixes the gimp issue and looks like it should finally nail the eclipse bug. I'm not sure about the swing issue though. Can you demonstrate the errors a little more clearly, and possibly step me through running your test suite?
Comment 6 Clemens Eisserer 2011-10-31 03:42:27 UTC
Thanks, I can confirm the gimp and eclipse editor problems are fixed.

Regarding the swing bugs, simply execute the jar-file attached with:
java -jar SwingSet2.jar (openjdk/oracle >= 6 required)

A window with internal frames will appear, just dragging the internal frames arround a bit should be enough to create corruptions.
Comment 7 Clemens Eisserer 2011-10-31 03:43:40 UTC
Created attachment 52940 [details]
swingset demo application
Comment 8 Chris Wilson 2011-10-31 04:37:07 UTC
So it looks like it is clipping the PolyRectangle to the box underneath, i.e.

-------------------------------------------
|Frame                                     |
-------------------------------------------

becomes
------
|Frame
.

By dragging the internal windows around. Does that seem an accurate description? Or are you seeing something else?
Comment 9 Chris Wilson 2011-10-31 04:58:14 UTC
commit 9a2e59bfba6748325918f895b3e58351c7eb4baa
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 31 11:56:53 2011 +0000

    sna: Fix reversal of zero/wide for PolyRectangle
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42414
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Clemens, thanks for the bug reports. If you can spot any more issues, please let me know.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.