sna/blt: Don't idiotically override alu for pixel==0 and track alu

Another classic and utterly stupid mistake. At least I was consistent in
my error.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42414
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>